<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info"
        style="@style/SignupFragmentTitleBaseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_information" />

    <EditText
        android:id="@+id/creditCardNumber"
        style="@style/SignupFragmentEditTextBaseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/edittext_credit_card_icon_gray"
        android:hint="@string/signup_credit_card_number"
        android:inputType="number" />


    <LinearLayout
        android:id="@+id/expirationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/signup_edittext_vertical_padding"
        android:weightSum="1">

        <TextView
            android:id="@+id/expirationDateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:paddingBottom="@dimen/signup_edittext_horizontal_padding"
            android:paddingTop="@dimen/signup_edittext_horizontal_padding"
            android:text="@string/expiration_date" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider_background" />

        <singularity.com.cleanium.controls.NoDefaultSpinner
            android:id="@+id/month_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_credit_card_height"
            android:layout_weight="0.25"
            android:layout_marginRight="9dp"
            android:gravity="center"
            android:background="@drawable/arrow_spinner_background"
            android:prompt="@string/month"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider_background" />

        <singularity.com.cleanium.controls.NoDefaultSpinner
            android:id="@+id/year_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_credit_card_height"
            android:layout_weight="0.25"
            android:layout_marginRight="9dp"
            android:gravity="center"
            android:background="@drawable/arrow_spinner_background"
            android:prompt="@string/year"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider_background" />


        <ImageView
            android:id="@+id/expDateIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.30"
            android:src="@drawable/edittext_expiration_date_icon_gray" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_background" />

    <EditText
        android:id="@+id/cvc"
        style="@style/SignupFragmentEditTextBaseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/edittext_cvc_icon_gray"
        android:hint="@string/signup_cvc_number"
        android:inputType="number" />

    <TextView
        style="@style/SignupFragmentEditTextBaseStyle"
        android:id="@+id/not_mandatory_text"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/step_not_mandatory" />


    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/back_fragment_button_blue"
            android:gravity="center"
            android:paddingBottom="@dimen/signup_edittext_horizontal_padding"
            android:paddingTop="@dimen/signup_edittext_horizontal_padding"
            android:text="@string/back" />

        <TextView
            android:id="@+id/finishBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/next_fragment_button_blue"
            android:gravity="center"
            android:paddingBottom="@dimen/signup_edittext_horizontal_padding"
            android:paddingTop="@dimen/signup_edittext_horizontal_padding"
            android:text="@string/finish" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottomBar2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/place_order_icon"
            android:gravity="center"
            android:paddingBottom="@dimen/signup_edittext_horizontal_padding"
            android:paddingTop="@dimen/signup_edittext_horizontal_padding"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>
