<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/tutorial_page_header_text_margin_top"
        android:text="@string/tutorial_third_page_header_text"
        android:textSize="@dimen/font_size_19sp"
        android:textColor="@android:color/white"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/header_text2"
        android:layout_marginTop="@dimen/tutorial_page_picture_vertical_margin"
        android:layout_marginBottom="@dimen/tutorial_page_picture_vertical_margin"
        android:src="@drawable/tutorial_page_three_picture"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image"
        android:layout_above="@+id/tutorial_third_page_button">

        <TextView
            android:id="@+id/tutorial_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/tutorial_page_content_text_horizontal_margin"
            android:layout_marginRight="@dimen/tutorial_page_content_text_horizontal_margin"
            android:gravity="center_horizontal"
            android:text="@string/tutorial_third_page_content_text"
            android:textSize="@dimen/font_size_16sp"
            android:textColor="@android:color/white"/>
    </ScrollView>

    <Button
        android:id="@+id/tutorial_third_page_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/tutorial_third_page_button_text"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="@dimen/font_size_16sp"
        android:layout_marginLeft="@dimen/login_fragment_elements_horizontal_margin"
        android:layout_marginRight="@dimen/login_fragment_elements_horizontal_margin"
        android:layout_marginTop="@dimen/tutorial_page_text_margin_bottom"
        android:layout_marginBottom="@dimen/tutorial_page_text_margin_bottom"
        android:background="@android:color/white"/>
</RelativeLayout>
